[fix] streams workers